src/objects/HeatMapSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>HeatMapColorStops__c</fullName>
        <description>Comma separated list of hex values specifying the colors used in the heatmap from the bottom left to the top right. For example: FF0000,00FF00,33FF00</description>
        <inlineHelpText>Comma separated list of hex values specifying the colors used in the heatmap from the bottom left to the top right. For example: FF0000,00FF00,33FF00</inlineHelpText>
        <label>HeatMapColorStops</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HeatMapDimensions__c</fullName>
        <description>Enter a 1 or 2 digit number to represent the number of cells on both the x and y axes of the Heat Map. The default value is 5. Supported values are 3, 5 and 10. If an unsupported value is used, the Heat Map will revert to 5x5.</description>
        <label>HeatMapDimensions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityHeatMapColorStops__c</fullName>
        <description>Comma separated list of hex values specifying the colors used in the heatmap from the bottom left to the top right. For example: FF0000,00FF00,33FF00</description>
        <inlineHelpText>Comma separated list of hex values specifying the colors used in the heatmap from the bottom left to the top right. For example: FF0000,00FF00,33FF00</inlineHelpText>
        <label>OpportunityHeatMapColorStops</label>
        <type>TextArea</type>
    </fields>
    <label>HeatMapSettings</label>
</CustomObject>